# myreflection

./: .autotools  .cproject  .gitignore  .project  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
docs/: quickguide.dox
include/: myrefl_client.h  swdiag_client.h
project/: project.m4sugar
server/: myreflection.cfg  swdiag.cfg
server/http/: index.html
server/http/assets/css/: gsdk.css  gsdk_ns.css
server/http/assets/less/: gsdk_ns.less
server/http/jquery-ui-1.9.1.custom/development-bundle/themes/start/minified/: jquery.ui.theme.min.css
server/http/prime-ui-0.2/development/: prime-ui-0.2.css  prime-ui-0.2.js
server/http/prime-ui-0.2/production/: prime-ui-0.2-min.css  prime-ui-0.2-min.js
server/http/prime-ui-0.2/production/css/autocomplete/: autocomplete.css
server/http/prime-ui-0.2/production/css/button/: button.css
server/http/prime-ui-0.2/production/js/accordion/: accordion.js
server/http/prime-ui-0.2/production/js/button/: button.js
server/http/prime-ui-0.2/production/js/core/: core.js
server/http/prime-ui-0.2/production/js/growl/: growl.js
server/http/prime-ui-0.2/production/js/inputtext/: inputtext.js
server/http/prime-ui-0.2/production/js/inputtextarea/: inputtextarea.js
server/http/prime-ui-0.2/production/js/rating/: rating.js
server/http/prime-ui-0.2/production/js/spinner/: spinner.js
server/http/prime-ui-0.2/production/js/tabview/: tabview.js
server/init/: swdiag
server/modules/: diag_diskspace.sh  diag_diskspace.sh.conf  diag_memory.py  diag_memory_conf.py  diag_postgres.py  diag_postgres_conf.py
server/src/: myrefl_json_parser.c  myrefl_json_parser.h  myrefl_server.c  myrefl_server_config.c  myrefl_server_config.h  myrefl_server_libinterface.c  myrefl_server_module.c  myrefl_server_module.h  myrefl_webserver.c  myrefl_webserver.h  smtpfuncs.c  smtpfuncs.h  swdiag_json_parser.c  swdiag_json_parser.h  swdiag_server.c  swdiag_server_config.c  swdiag_server_config.h  swdiag_server_libinterface.c  swdiag_server_module.c  swdiag_server_module.h  swdiag_webserver.c  swdiag_webserver.h
src/: config.h.in  myrefl_api.c  myrefl_api.h  myrefl_cli.h  myrefl_cli_handle.h  myrefl_cli_local.c  myrefl_cli_local.h  myrefl_cli_remote.h  myrefl_linux.c  myrefl_linux.h  myrefl_linux_rpc_thread.c  myrefl_obj.c  myrefl_obj.h  myrefl_posix.c  myrefl_rci.c  myrefl_rci.h  myrefl_sched.c  myrefl_sched.h  myrefl_sequence.c  myrefl_sequence.h  myrefl_sunos.c  myrefl_sunos.h  myrefl_sunos_rpc_thread.c  myrefl_syslog.c  myrefl_thread.c  myrefl_thread.h  myrefl_trace.c  myrefl_trace.h  myrefl_types.h  myrefl_unix_rpc.x  myrefl_util.c  myrefl_util.h  myrefl_xos.c  myrefl_xos.h  swdiag_api.c  swdiag_api.h  swdiag_cli.h  swdiag_cli_handle.h  swdiag_cli_local.c  swdiag_cli_local.h  (+26 more)
src/examples/: example10_descriptions.c  example11_dependencies.c  example12_flags.c  example1_polledtest.c  example2_notification.c  example3_component.c  example4_instance.c  example5_rules.c  example6_combined_rules.c  example7_rule_severity.c  example8_rule_comp_health.c  examples.h
test/: README
tests/: Makefile.am  Makefile.in  check_base_xos_stubs.c  check_obj.c  check_sched.c  check_thread.c  check_util.c  check_xos.c
util/: myrefl_stubs.c  myrefl_test.c  myrefl_test_proc.c  myrefl_unix_cli.c  myrefl_unix_exec.c  myreflection.c  swdiag.c  swdiag_stubs.c  swdiag_test.c  swdiag_test_proc.c  swdiag_unix_cli.c  swdiag_unix_exec.c
